--- a/02_Web_Development_101/The_Front_End/Project_Javascript_and_jQuery/index.html
+++ b/02_Web_Development_101/The_Front_End/Project_Javascript_and_jQuery/index.html
@@ -2,11 +2,12 @@
 <html>
 <head>
 	<title>Etch-A-Sketch</title>
+
 	<script src="https://ajax.googleapis.com/ajax/libs/jquery/1.11.0/jquery.min.js"></script>
-
 	<link rel="stylesheet" type="text/css" href="css/styles.css">
-	<script src="js/etch.js"></script>
+	<link rel="stylesheet" type="text/css" href="css/csshake.min.css">
 
+	<script src="js/etch.js"></script>
 	
 </head>
 <body>
@@ -14,17 +15,15 @@
 	<div id='wrapper'>
 	
 		<h1>¡ Etch-A-Sketch !</h1>
+		<button id='shake'>shake</button>
 		<div id="settings">
-			<div id='color'></div>
+			<div id='color' class="shake-trigger"></div>
 			<div id='palette'></div>
 			<div id="info"></div>
 			<button id="reset">reset</button>		
 		</div>
-		
 		<div id='etch-container'></div>
-
 	</div>
-	
 
 
 </body>
